Update PSO documentation. Importers use constant size instead of relying on reading it from the file.

--- a/QGL_Graphics/QGL_Graphics.vcxproj.filters
+++ b/QGL_Graphics/QGL_Graphics.vcxproj.filters
@@ -280,11 +280,11 @@
     <ClCompile Include="qgl_multisample_desc_buffer.cpp">
       <Filter>Source Files\Content\Content-Buffers</Filter>
     </ClCompile>
-    <ClCompile Include="qgl_multisample_desc.cpp">
-      <Filter>Header Files\Content</Filter>
-    </ClCompile>
     <ClCompile Include="qgl_multisample_desc_file_loader.cpp">
       <Filter>Source Files\Content\File-Loaders</Filter>
+    </ClCompile>
+    <ClCompile Include="qgl_multisample_desc.cpp">
+      <Filter>Source Files\Content</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
