Add text format file importer.

--- a/QGL_Graphics/QGL_Graphics.vcxproj
+++ b/QGL_Graphics/QGL_Graphics.vcxproj
@@ -290,6 +290,7 @@
     <ClCompile Include="qgl_cpy_cmd_list.cpp" />
     <ClCompile Include="qgl_depth_stencil.cpp" />
     <ClCompile Include="qgl_depth_stencil_buffer.cpp" />
+    <ClCompile Include="qgl_depth_stencil_file_loader.cpp" />
     <ClCompile Include="qgl_descriptor_range.cpp" />
     <ClCompile Include="qgl_descriptor_table.cpp" />
     <ClCompile Include="qgl_dsv_descriptor_heap.cpp" />
@@ -333,6 +334,7 @@
     <ClCompile Include="qgl_texture.cpp" />
     <ClCompile Include="qgl_text_format.cpp" />
     <ClCompile Include="qgl_text_format_buffer.cpp" />
+    <ClCompile Include="qgl_text_format_file_loader.cpp" />
     <ClCompile Include="qgl_text_render_component.cpp" />
     <ClCompile Include="qgl_uav_descriptor_heap.cpp" />
     <ClCompile Include="qgl_vertex_desc_header.cpp" />
